--- a/public/stylesheets/tecbioq/lista.css
+++ b/public/stylesheets/tecbioq/lista.css
@@ -16,3 +16,15 @@ h1{
     margin-bottom: 1rem;
     color: #343a40; 
   }
+
+
+  .titulo-lista2 {
+     margin-bottom: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #343a40; 
+  }
+
+  .divTituloAuditoria{
+    margin:1rem 0 ;
+  }
