--- a/views/administrador2/layout.pug
+++ b/views/administrador2/layout.pug
@@ -20,7 +20,7 @@ html
    block header
     include navTop
 
-   div(class="container-fluid d-flex main-wrapper" )
+   div(class="container-fluid main-wrapper mt-5" )
     block content
      
         
