--- a/views/tecBioq/clickExamen.pug
+++ b/views/tecBioq/clickExamen.pug
@@ -3,8 +3,8 @@ append styles
       link(rel='stylesheet', href='/stylesheets/tecBioq/formularios.css')
 include ./formExamen.pug
 block content 
-   .row.justify-content-center 
-    .col-lg-6
+  .row.justify-content-center 
+    .col-lg-9.col-xxl-8
      .row
       include ./menuLateralExamen.pug
       .col
