--- a/views/tecBioq/menuLAteralMuestra.pug
+++ b/views/tecBioq/menuLAteralMuestra.pug
@@ -1,4 +1,4 @@
-aside(class="d-flex position-fixed vh-100 " style="top: calc(var(--header-height));")
+aside(class="col-auto  me-3" )
  nav(class="nav flex-column bg-light p-3" style="width: 240px;")
   ul(class="bd-links-nav list-unstyled mb-0 pb-3 pb-md-2 pe-lg-2")
    li(class="nav-item")
