--- a/public/stylesheets/admins2/clickUsuario.css
+++ b/public/stylesheets/admins2/clickUsuario.css
@@ -6,3 +6,64 @@
     z-index: 1040;
   }
 
+
+
+.lista-datos-usuarioEliminado {
+    background-color: rgba(220, 53, 69, 0.1); 
+    filter: grayscale(50%) brightness(0.9); 
+    opacity: 0.7; 
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .lista-datos-usuarioEliminado .list-group-item {  
+    color: #a0a0a0; 
+    
+  }
+
+  #divLista .div-usuario:not(:first-child) {
+    margin-top: 3rem;
+  }
+
+  .div-usuario {
+    background: #f8f9fa; 
+    border: 2px solid #dee2e6;
+    border-radius: 8px;
+    padding: 1.5rem;
+  }
+  
+  .titulo-lista{
+    position: relative;
+  }
+  
+.tresPuntos{
+  position:absolute;
+  right: 0.3rem;
+  top: 0.3rem;
+  cursor: pointer;
+}
+
+  .titulo-lista h3 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #343a40; 
+  }
+
+  .lista-datos-usuario{
+    background-color: #f8f9fa; 
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
+    
+button.dropdown{
+  background-color: #f8f9fa; 
+  padding: 0.5rem;
+  border: 0;
+}    
+
+button.dropdown:hover{
+  background-color:transparent;
+  cursor:pointer
+}
