--- a/public/stylesheets/tecbioq/formularios.css
+++ b/public/stylesheets/tecbioq/formularios.css
@@ -13,7 +13,11 @@
   margin-bottom: 5px;
   }
   
-  .form-div input {
+
+  .form-div input[type="text"],
+.form-div input[type="email"],
+.form-div input[type="number"],
+.form-div input[type="tel"] {
     text-align: right;
     border:0 ;
     outline: 0;
@@ -65,10 +69,8 @@
 
 
   .divFormulario{
-    border-top: #261290 solid 0.5rem;
      background-color: #F8F9FA;
      padding:1.5rem 0.5rem;
-      box-shadow: 0 0 5px 1px rgba(0,0,0,0.65);
   }
 
 
@@ -104,3 +106,11 @@
 }
 
 p{margin-bottom: 5px;}
+
+
+input[type="checkbox"] {
+  -webkit-appearance: checkbox;
+  -moz-appearance: checkbox;
+  appearance: checkbox;
+  width: auto;
+}
