--- a/views/administrador2/menuLateralOrdenes.pug
+++ b/views/administrador2/menuLateralOrdenes.pug
@@ -1,4 +1,4 @@
-aside(class="d-flex position-fixed vh-100" style="top: calc(var(--header-height));")
+aside(class="col-auto  me-3" )
   nav(class="nav flex-column bg-light p-3" style="width: 240px;")
     h6 Aplicar filtros
     - console.log("QUERY STRING")
