--- a/views/tecBioq/menuLateralExamen.pug
+++ b/views/tecBioq/menuLateralExamen.pug
@@ -1,4 +1,4 @@
-aside(class="col flex-grow-0")
+aside(class="col-auto  me-3" )
  nav(class="nav flex-column bg-light navLateral")
   ul(class="bd-links-nav list-unstyled ")
    li(class="nav-item")
